Minor alignment issues

--- a/src/staff_augmentation/components/OurServices/styles.module.scss
+++ b/src/staff_augmentation/components/OurServices/styles.module.scss
@@ -32,9 +32,7 @@
   grid-template-columns: repeat(2, 1fr);
   padding: 0;
   gap: 10px;
-  margin-bottom: 25px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 25px;
 
   li:nth-child(odd) {
     margin-top: -10px;
@@ -54,8 +52,7 @@
     width: auto;
     grid-row: auto;
     gap: 25px;
-    margin-top: -75px;
-    margin-bottom: 75px;
+    margin: -75px auto 75px 0;
 
     li:nth-child(odd) {
       margin-top: -25px;
@@ -73,7 +70,7 @@
     border: 1px solid #E1E1E1;
     box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    padding: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -256,6 +253,9 @@
 }
 
 .needHelpIfFull {
+  align-self: flex-end;
+  margin-bottom: 36px;
+
   @include for-tablet-down {
     display: none;
   }
@@ -358,6 +358,10 @@
 }
 
 .skills {
-  margin: 0 auto;
   max-width: 410px;
+  margin: 0 auto;
+
+  @include for-desktop-up {
+    margin: -30px 0 0;
+  }
 }
